inventory-app/inventory-api/inventory-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api-deployment
  namespace: inventory-app
  labels:
    app: inventory-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      namespace: inventory-app
      labels:
        app: inventory-api
    spec:
      containers:
      - name: inventory-api-container
        image: localhost:32000/inventory-api:v2
        ports:
        - containerPort: 5000
